@@ -48,6 +48,7 @@ package fr.lgi2a.similar2logo.kernel.model.levels;
 
 import java.util.Collection;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
@@ -356,7 +357,7 @@ public class LogoDefaultReactionModel implements ILevelReactionModel {
 			tmpField = field.getValue().clone();
 			for(int x = 0; x < field.getValue().length; x++) {
 				for(int y = 0; y < field.getValue()[x].length; y++) {
-					Set<Position> neighbors = environment.getNeighbors(x, y, 1);
+					List<Position> neighbors = environment.getNeighbors(x, y, 1);
 					for(Position p : neighbors) {
 						if(p.x != x || p.y != y) {
 							field.getValue()[p.x][p.y] = field.getValue()[p.x][p.y] + field.getKey().getDiffusionCoef()*tmpField[x][y]/8;
