@@ -2,6 +2,8 @@ v0.7
 	* Deprecate classes using Swing view
 	* Parametrize Mark class
 	* Optimize reaction model
+	* Optimize JSON Probe
+	* Optimize environment primitives
 
 v0.6
 	* Add Parameter annotation to simulation parameters
